fix tileview alignment error when overflow. revert import interfaceConfig. It should be came from server.

--- a/css/filmstrip/_tile_view.scss
+++ b/css/filmstrip/_tile_view.scss
@@ -82,7 +82,6 @@
      * and allowing the thumbnails to wrap.
      */
     #filmstripRemoteVideosContainer {
-        align-content: center;
         align-items: center;
         box-sizing: border-box;
         display: flex;
